# pydantic-aws-cloudtrail

./: .gitignore  README.md  json.schema  pyproject.toml
output/: cluster0.txt  cluster1.txt  cluster2.txt  cluster3.txt  cluster4.txt  cluster5.txt  cluster6.txt  cluster7.txt  process.sh
output/output/: cluster0.txt  cluster1.txt  cluster2.txt  cluster3.txt  cluster4.txt  cluster5.txt  cluster6.txt  cluster7.txt
output/output/expanded/: cluster0.txt  cluster1.txt  cluster2.txt  cluster3.txt  cluster4.txt  cluster5.txt  cluster6.txt  cluster7.txt
output/output/visual/: cluster0.txt  cluster1.txt  cluster2.txt  cluster3.txt  cluster4.txt  cluster5.txt  cluster6.txt  cluster7.txt
src/introspector/: graph.py
src/json_schema/: Readme.md  __main__.py  consult.md  consult.py  meta.puml  meta.py  meta.yaml  model.py
src/pydantic_aws_cloudtrail/: __main__.py  fetch.py  parse.py
src/pydantic_aws_cloudtrail/aws/cloudtrail/events/: __init__.py
src/pydantic_metamodel/: __main__.py
src/pydantic_metamodel/model/meta/: __init__.py  notes.org
src/pydantic_metamodel/model/meta/meta/: __init__.py
