[tool.poetry]
name = "pydantic-aws-cloudtrail"
version = "0.1.0"
description = ""
authors = ["Mike DuPont <jmikedupont2@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_aws_cloudtrail", from = "src"}]

[tool.poetry.scripts]
pydantic-aws-cloudtrail = "pydantic_aws_cloudtrail.__main__:main"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
